--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,9 @@ a.takeatour:hover{
 
 .color-numbers{
   height: 280px;
+
   background-color: #1f252f;
+
 }
 
 .grren-number{
@@ -350,23 +352,29 @@ a.takeatour:hover{
   font-size: 60px;
   font-weight: lighter;
   margin-top: 85px;
-  margin-left: 110px;
+  text-align: center;
 }
+.greenline{
+  width: 307px;
+  border-top: 4px solid #86d375;
 
+}
 .blue-number{
   color: #7aa7f1;
   font-size: 60px;
   font-weight: lighter;
   margin-top: 85px;
-  margin-left: 100px;
+  text-align: center;
 }
+.blue-number p{
 
+}
 .red-number{
   color: #f47272;
   font-size: 60px;
   font-weight: lighter;
   margin-top: 85px;
-  margin-left: 100px;
+  text-align: center;
 }
 
 .perple-number{
@@ -374,7 +382,7 @@ a.takeatour:hover{
   font-size: 60px;
   font-weight: lighter;
   margin-top: 85px;
-  margin-left: 110px;
+  text-align: center;
 }
 
 .orange-number{
@@ -382,10 +390,27 @@ a.takeatour:hover{
   font-size: 60px;
   font-weight: lighter;
   margin-top: 85px;
-  margin-left: 95px;
+  text-align: center;
 }
 
-.color-numbers .col{
+
+
+.color-numbers .col-2{
   height: 280px;
   border-right: 1px solid #363b44;
+}
+
+.small-line{
+  height: 1px;
+  width: 30px;
+  background-image: linear-gradient(1deg, #00f0ff, #ebacfd);
+  margin-left: 130px;
+  margin-top: 25px;
+}
+
+.col-2 p{
+  color: #c3c5c8;
+  margin-top: 25px;
+  text-align: center;
+  margin-left: 0;
 }
