--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html{
 body {
   margin: 0;
 }
-h1, h2, h3, p{
+h1 h2 h3 h4 h5 h6 p{
   font-family: 'Tajawal', sans-serif;
 }
 .logo{
@@ -19,7 +19,7 @@ h1, h2, h3, p{
 
 .name{
 
-  font-weight: 800;
+  font-weight: 400;
   text-transform: uppercase;
 
 }
@@ -76,6 +76,7 @@ h1, h2, h3, p{
 .index-ecran h3{
   color: white;
   text-align: center;
+  font-weight: lighter;
 }
 
 a.bgetstarted{
@@ -166,10 +167,12 @@ span{
   color: #999999;
   font-size: 18px;
   margin-top: 30px;
+  padding-left: 75px;
 }
 
 .blacktext-noalign{
   font-size: 14px;
+  padding-left: 75px
 }
 .takeatour-botton{
   margin-top: 45px;
@@ -259,18 +262,39 @@ a.takeatour:hover{
   height: 180px;
   background: #82b440;
 
+
 }
 
 .purchasenow h3{
-  float: left;
+
   color: white;
   font-size: 30px;
-  padding-top: 75px;
-  margin-right: 180px;
+  font-weight: lighter;
+
+
+}
+
+.purchasenow .row{
+  padding-top: 60px;
 }
 
 .purchasenow a.bpurchasenow{
-  margin-top: 65px;
+  width: 270px;
+  height: 55px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 14px;
+  border: 1px solid white;
+  border-radius: 3px;
+  background: #82b440;
+  box-shadow:  0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 15px;
+  transition: 0.2s;
+  margin: 0;
+
 }
 
 .purchasenow a.bpurchasenow:hover{
@@ -289,6 +313,7 @@ a.takeatour:hover{
   float: left;
   padding-top: 100px;
   margin-right: 30px;
+  padding-bottom: 100px;
 
 }
 
@@ -299,7 +324,8 @@ a.takeatour:hover{
 
 .properties p{
   font-size: 14px;
-  margin-left: 75px;
+
+
 }
 
 .row-2{
@@ -523,7 +549,7 @@ a.takeatour:hover{
   color:  #cccccc;
   font-size: 14px;
   padding-top: 26px;
-  padding-left: 25px;
+  padding-left: 100px;
 }
 
 .whatwedo .col-4 .prop li{
@@ -546,7 +572,7 @@ a.takeatour:hover{
 .whatwedo .col-8 .col-md-3{
   width: 382px;
   height: 400px;
-  margin-left: margin-left: 50px;
+  margin-left: 50px;
 
 }
 .whatwedo .col-8 .col-md-3:hover{
@@ -620,31 +646,374 @@ a.takeatour:hover{
 
 .thebestpartners .row{
   padding-top: 90px;
-  padding-left: 105px;
+  padding-left:50px;
 
 }
 
 .thebestpartners .col-3{
-
+  height: 84px;
+  width: 290px;
   margin-bottom: 70px;
 
+}
+
+.blue{
+  display: inline-block;
+  color: #4285f4;
+  font-size: 20px;
+}
+
+
+/*thebestpartners*/
+
+.prisingtables {
+  height: 1240px;
+}
+
+.prisingtables h3{
+  font-weight: lighter;
+  font-size: 36px;
+  text-align: center;
+  color: black;
+  margin-top: 100px;
+}
+
+.prisingtables .small-line{
+  width: 100px;
+  margin-top: 20px;
+}
+
+.prisingtables p{
+  font-size: 18px;
+  font-weight: lighter;
+  color: #999999;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 70px;
+  margin-left: 0;
+}
+
+.prisingtables .col{
+  width: 390px;
+  height: 820px;
+  border-radius: 3px;
+  border: 1px solid #eaeaea;
+  background-color: #ffffff;
+  padding: 0;
+  position: sticky;
+}
+
+.prisingtables .col p{
+  margin: 0;
+}
+
+.big-line{
+  width: 390px;
+  height: 5px;
+  background-image: linear-gradient(1deg, #00f0ff, #ebacfd);
+  margin: auto;
 
 
 }
-.thebestpartners .col-3 img{
-  position: absolute;
-
-  margin-right: 40px;
-
+.parallelogram h4{
+  color: #ffffff;
+  text-align: center;
+  font-size: 8px;
+  font-weight: 400;
+  line-height: 25.46px;
+  text-transform: uppercase;
 
 }
-
-.poloska-ver{
+.parallelogram{
+  height: 0;
+  width: 130px;
+  border-bottom: 20px solid  #4285f4;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  transform: rotate(-45deg);
   position: relative;
-  left: 100%;
-  top: 50%;
-  height: 81px;
-  width: 0;
-  border-right: 1px solid rgba(0, 0 , 0 , 0.5);
+  right: 28px;
+  top: 28px;
+  margin-bottom: -25px
+}
 
+.prisingtables .col h5{
+  font-size: 20px;
+  text-align: center;
+  padding-top: 30px;
+  margin: 0;
+}
+
+.prisingtables .col .gray-line{
+  height: 1px;
+  width: auto;
+  background-color: #000000;
+  opacity: 0.1;
+  margin-top: 70px;
+  margin-bottom: -40px;
+}
+
+.prisingtables .col h6{
+  color: #333333;
+  text-align: center;
+}
+
+.prisingtables .col i{
+  color: #9bcb5b;
+}
+
+.prisingtables .col p{
+  font-size: 14px;
+}
+
+.gray-line-small{
+  width: 290px;
+  height: 1px;
+  background-color: #000000;
+  opacity: 0.1;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: -70px;
+}
+
+.gray-line-1{
+  height: 1px;
+  width: 100%;
+  background-color: #000000;
+  opacity: 0.1;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+a.bgetstartednow{
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 14px;
+  padding: 1px solid;
+  border-radius: 3px;
+  background: #4285f4;
+  box-shadow: 0 -3px #2c6cd6 inset;
+  padding: 22px 43px;
+  transition: 0.2s;
+  margin-left: 85px;
+  z-index: 0;
+}
+a.bgetstartednow:hover{
+  background: #6a9ef5;
+  box-shadow: 0 -3px #5283d4 inset;
+  z-index: 100;
+}
+
+a.green-bgetstartednow{
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 14px;
+  padding: 1px solid;
+  border-radius: 3px;
+  background: #82b440;
+  box-shadow:  0 0 5px rgba(0, 0, 0, 0.2);
+  padding: 22px 43px;
+  transition: 0.2s;
+  margin-left: 85px;
+}
+a.green-bgetstartednow:hover{
+  background: #82b4a0;
+  box-shadow:  0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.shadow{
+   height: 100%;
+   box-shadow: 0px 0px 44px 0px #757575;
+
+}
+
+.z{
+  z-index: 30;
+}
+
+.reg{
+  height: 948px;
+  background-color: #14171d;
+  opacity: 0.95;
+}
+
+.reg h3{
+  color: #ffffff;
+  font-weight: lighter;
+  font-size: 36px;
+  text-align: center;
+  padding-top: 100px;
+  margin-bottom: 20px;
+}
+
+.reg .small-line{
+  width: 100px;
+  margin-bottom: 30px;
+}
+
+.reg p{
+  color: #999999;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 70px;
+}
+
+::-webkit-input-placeholder  {
+    color: #ffffff;
+    font-family: 'Tajawal', sans-serif;
+
+    font-size: 16px;
+    font-weight: 300;
+}
+
+input {
+  outline: none;
+}
+
+#wrapper input:not([type="checkbox"]){
+  display: grid;
+  width: 500px;
+  height: 60px;
+  border-radius: 3px;
+  border: 1px solid #444957;
+  background-color: #212121;
+  margin: auto;
+  margin-top: 20px;
+  padding-left: 30px;
+  color: white;
+}
+
+#wrapper input:not([type="checkbox"]):active,
+#wrapper input:not([type="checkbox"]):focus{
+    border: 1px solid #444947;
+    background-color: #212110;
+    color: white;
+    padding-left: 30px;
+
+}
+
+#wrapper p.button input{
+  width: 500px;
+  height: 70px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  border: 1px solid #2c6cd6;
+  background-color: #4285f4;
+  transition: 0.2s;
+  color: #ffffff;
+  margin-left: 304px;
+
+  margin-top: 23px;
+  text-align: center;
+  padding: 0px;
+
+}
+#wrapper p.button input:hover{
+    background-color:  #6a9ef5;
+}
+#wrapper p.button input:active{
+    background-color: #6a9ef5;
+}
+
+.fields-required p{
+  color: #666666;
+  font-size: 14px;
+  text-align: center;
+  margin: 0;
+  margin-top: 50px;
+}
+
+/*reg*/
+
+.footer{
+  height: 475px;
+}
+
+.footer .adress{
+  height: 385px;
+  background-color: #242427;
+}
+.footer .row{
+  padding-top: 120px;
+}
+.footer .col{
+  width: 200px;
+  height: 150px;
+  margin-left: 60px;
+}
+.footer img{
+  margin-left: 70px;
+  margin-bottom: 30px;
+}
+.footer h3{
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.footer p{
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 11px;
+  text-align: center;
+  margin: 0;
+  opacity: 0.5;
+}
+
+.footer .col h5{
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: lighter;
+  text-align: left;
+  margin-bottom: 25px;
+}
+
+.footer li{
+  list-style: none;
+  margin-left: -40px;
+}
+
+.footer ul{
+  color: #999999;
+  font-size: 14px;
+
+}
+.white{
+  display: inline-block;
+  color: #ffffff;
+  opacity: 1;
+}
+
+
+.footer .allrights{
+  width: 100%;
+  height: 90px;
+  background-color: #1a1a1d;
+
+
+}
+
+.footer .row{
+  padding-top: 35px;
+}
+
+.footer .allrights p{
+  text-align: left;
+  font-size: 14px;
+}
+
+.footer i{
+  color: #999999;
+  margin-right: 20px;
+}
+
+.footer i:hover{
+  color: white;
+  transition: 0.2s;
 }
