--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,15 @@ span{
   background-image: linear-gradient(1deg, #00f0ff, #ebacfd);
   margin-top: 30px;
 }
-
+.great-theme p{
+  color: #999999;
+  font-size: 16px;
+  margin-top: 25px;
+}
+.great-theme .black{
+  color: black;
+  font-size: 14px;
+}
 .graytext{
   color: #999999;
   font-size: 18px;
